src/test/ui/nll/user-annotations/adt-brace-enums.stderr
warning: type parameter on variant
  --> $DIR/adt-brace-enums.rs:20:26
   |
LL |     SomeEnum::SomeVariant::<_> { t: &c };
   |                          ^^^^^
   |
   = note: `#[warn(type_param_on_variant_ctor)]` on by default
help: set the type parameter on the enum
   |
LL |     SomeEnum::<_>::SomeVariant { t: &c };
   |             ^^^^^            --

warning: type parameter on variant
  --> $DIR/adt-brace-enums.rs:30:26
   |
LL |     SomeEnum::SomeVariant::<&u32> { t: &c };
   |                          ^^^^^^^^
   |
help: set the type parameter on the enum
   |
LL |     SomeEnum::<&u32>::SomeVariant { t: &c };
   |             ^^^^^^^^            --

warning: type parameter on variant
  --> $DIR/adt-brace-enums.rs:40:26
   |
LL |     SomeEnum::SomeVariant::<&'static u32> { t: &c };
   |                          ^^^^^^^^^^^^^^^^
   |
help: set the type parameter on the enum
   |
LL |     SomeEnum::<&'static u32>::SomeVariant { t: &c };
   |             ^^^^^^^^^^^^^^^^            --

warning: type parameter on variant
  --> $DIR/adt-brace-enums.rs:51:26
   |
LL |     SomeEnum::SomeVariant::<&'a u32> { t: &c };
   |                          ^^^^^^^^^^^
   |
help: set the type parameter on the enum
   |
LL |     SomeEnum::<&'a u32>::SomeVariant { t: &c };
   |             ^^^^^^^^^^^            --

warning: type parameter on variant
  --> $DIR/adt-brace-enums.rs:60:26
   |
LL |     SomeEnum::SomeVariant::<&'a u32> { t: c };
   |                          ^^^^^^^^^^^
   |
help: set the type parameter on the enum
   |
LL |     SomeEnum::<&'a u32>::SomeVariant { t: c };
   |             ^^^^^^^^^^^            --

warning: type parameter on variant
  --> $DIR/adt-brace-enums.rs:73:30
   |
LL |         SomeEnum::SomeVariant::<&'a u32> { t: &c };
   |                              ^^^^^^^^^^^
   |
help: set the type parameter on the enum
   |
LL |         SomeEnum::<&'a u32>::SomeVariant { t: &c };
   |                 ^^^^^^^^^^^            --

warning: type parameter on variant
  --> $DIR/adt-brace-enums.rs:86:30
   |
LL |         SomeEnum::SomeVariant::<&'a u32> { t: c };
   |                              ^^^^^^^^^^^
   |
help: set the type parameter on the enum
   |
LL |         SomeEnum::<&'a u32>::SomeVariant { t: c };
   |                 ^^^^^^^^^^^            --

error[E0597]: `c` does not live long enough
  --> $DIR/adt-brace-enums.rs:35:48
   |
LL |     SomeEnum::<&'static u32>::SomeVariant { t: &c };
   |                                                ^^
   |                                                |
   |                                                borrowed value does not live long enough
   |                                                requires that `c` is borrowed for `'static`
LL | }
   | - `c` dropped here while still borrowed

error[E0597]: `c` does not live long enough
  --> $DIR/adt-brace-enums.rs:40:48
   |
LL |     SomeEnum::SomeVariant::<&'static u32> { t: &c };
   |                                                ^^
   |                                                |
   |                                                borrowed value does not live long enough
   |                                                requires that `c` is borrowed for `'static`
LL |
LL | }
   | - `c` dropped here while still borrowed

error[E0597]: `c` does not live long enough
  --> $DIR/adt-brace-enums.rs:46:43
   |
LL | fn annot_reference_named_lifetime<'a>(_d: &'a u32) {
   |                                   -- lifetime `'a` defined here
LL |     let c = 66;
LL |     SomeEnum::<&'a u32>::SomeVariant { t: &c };
   |                                           ^^
   |                                           |
   |                                           borrowed value does not live long enough
   |                                           requires that `c` is borrowed for `'a`
LL | }
   | - `c` dropped here while still borrowed

error[E0597]: `c` does not live long enough
  --> $DIR/adt-brace-enums.rs:51:43
   |
LL | fn annot_reference_named_lifetime2<'a>(_d: &'a u32) {
   |                                    -- lifetime `'a` defined here
LL |     let c = 66;
LL |     SomeEnum::SomeVariant::<&'a u32> { t: &c };
   |                                           ^^
   |                                           |
   |                                           borrowed value does not live long enough
   |                                           requires that `c` is borrowed for `'a`
LL |
LL | }
   | - `c` dropped here while still borrowed

error[E0597]: `c` does not live long enough
  --> $DIR/adt-brace-enums.rs:66:47
   |
LL | fn annot_reference_named_lifetime_in_closure<'a>(_: &'a u32) {
   |                                              -- lifetime `'a` defined here
...
LL |         SomeEnum::<&'a u32>::SomeVariant { t: &c };
   |                                               ^^
   |                                               |
   |                                               borrowed value does not live long enough
   |                                               requires that `c` is borrowed for `'a`
LL |     };
   |     - `c` dropped here while still borrowed

error[E0597]: `c` does not live long enough
  --> $DIR/adt-brace-enums.rs:73:47
   |
LL | fn annot_reference_named_lifetime_in_closure2<'a>(_: &'a u32) {
   |                                               -- lifetime `'a` defined here
...
LL |         SomeEnum::SomeVariant::<&'a u32> { t: &c };
   |                                               ^^
   |                                               |
   |                                               borrowed value does not live long enough
   |                                               requires that `c` is borrowed for `'a`
LL |
LL |     };
   |     - `c` dropped here while still borrowed

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0597`.
